@@ -1,14 +1,19 @@
 package research.dresden.htw.moderationapp.activities.members;
 
+import android.app.AlertDialog;
 import android.arch.lifecycle.MutableLiveData;
+import android.arch.lifecycle.Observer;
+import android.content.DialogInterface;
 import android.content.Intent;
 import android.graphics.Color;
+import android.support.annotation.Nullable;
 import android.support.v4.content.ContextCompat;
 import android.support.v7.app.AppCompatActivity;
 import android.os.Bundle;
 import android.view.View;
 import android.widget.AdapterView;
 import android.widget.ArrayAdapter;
+import android.widget.BaseAdapter;
 import android.widget.Button;
 import android.widget.ImageView;
 import android.widget.ListAdapter;
@@ -22,8 +27,8 @@ import java.util.ArrayList;
 import java.util.List;
 
 import research.dresden.htw.moderationapp.R;
-import research.dresden.htw.moderationapp.activities.discussion.AddMemberAdministrationActivity;
 import research.dresden.htw.moderationapp.loader.MemberListViewAdapter;
+import research.dresden.htw.moderationapp.manager.MemberManager;
 import research.dresden.htw.moderationapp.model.AppDataViewModel;
 import research.dresden.htw.moderationapp.model.Member;
 
@@ -37,7 +42,11 @@ public class MemberAdministrationActivity extends AppCompatActivity {
     FloatingActionButton editButton;
     FloatingActionButton deleteButton;
 
-    List<Integer> selectedItemPositionList = new ArrayList<Integer>();
+    ListView member_list_view;
+    ListAdapter memberListAdapter;
+
+    AppDataViewModel dataViewModel;
+    List<Integer> selectedItemPositionList = new ArrayList<>();
 
     @Override
     protected void onCreate(Bundle savedInstanceState) {
@@ -46,16 +55,17 @@ public class MemberAdministrationActivity extends AppCompatActivity {
 
         MutableLiveData<ArrayList<Member>> memberListData = AppDataViewModel.getInstance().getMemberList();
         ArrayList<Member> memberList = memberListData.getValue();
-        ListAdapter memberListAdapter = new MemberListViewAdapter(this, memberList);
-        ListView member_list_view = findViewById(R.id.member_list_view);
+        memberListAdapter = new MemberListViewAdapter(this, memberList);
+        member_list_view = findViewById(R.id.member_list_view);
         member_list_view.setChoiceMode(ListView.CHOICE_MODE_SINGLE);
         member_list_view.setAdapter(memberListAdapter);
-        addButton = (FloatingActionButton)findViewById(R.id.fab_action_add);
+        addButton = findViewById(R.id.fab_action_add);
         addButton.setEnabled(isAddActive);
-        editButton = (FloatingActionButton)findViewById(R.id.fab_action_edit);
+        editButton = findViewById(R.id.fab_action_edit);
         editButton.setEnabled(isEditActive);
-        deleteButton = (FloatingActionButton)findViewById(R.id.fab_action_delete);
+        deleteButton = findViewById(R.id.fab_action_delete);
         deleteButton.setEnabled(isDeleteActive);
+        dataViewModel = AppDataViewModel.getInstance();
 
         member_list_view.setOnItemClickListener(
                 new AdapterView.OnItemClickListener() {
@@ -67,33 +77,6 @@ public class MemberAdministrationActivity extends AppCompatActivity {
                     }
                 }
         );
-
-        member_list_view.setOnFocusChangeListener(new View.OnFocusChangeListener() {
-            @Override
-            public void onFocusChange(View view, boolean hasFocus) {
-                if (!hasFocus) {
-                    // TODO: Geht noch nicht
-                    ListView memberListView = (ListView) view.findViewById(R.id.member_list_view);
-                    for(int a = 0; a < memberListView.getChildCount(); a++)
-                    {
-                        memberListView.getChildAt(a).setBackgroundColor(Color.parseColor("#FFFFFF"));
-                    }
-
-                    // Set Text Color to white
-                    TextView idTextView = (TextView) view.findViewById(R.id.id_text_view_member);
-                    TextView titleTextView = (TextView) view.findViewById(R.id.title_text_view_member);
-                    TextView nameTextView = (TextView) view.findViewById(R.id.name_text_view_member);
-                    TextView organisationTextView = (TextView) view.findViewById(R.id.organisation_text_view_member);
-                    TextView roleTextView = (TextView) view.findViewById(R.id.role_text_view_member);
-
-                    idTextView.setTextColor(Color.parseColor("#FFFFFF"));
-                    titleTextView.setTextColor(Color.parseColor("#FFFFFF"));
-                    nameTextView.setTextColor(Color.parseColor("#FFFFFF"));
-                    organisationTextView.setTextColor(Color.parseColor("#FFFFFF"));
-                    roleTextView.setTextColor(Color.parseColor("#FFFFFF"));
-                }
-            }
-        });
 
         addButton.setOnClickListener(new View.OnClickListener() {
             @Override
@@ -116,9 +99,61 @@ public class MemberAdministrationActivity extends AppCompatActivity {
         deleteButton.setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View v) {
+                int size = -1;
+                size = selectedItemPositionList.size();
                 if(isDeleteActive){
+                    if(!selectedItemPositionList.isEmpty()) {
+                        final int finalSize = size;
+                        DialogInterface.OnClickListener dialogClickListener = new DialogInterface.OnClickListener() {
+                            @Override
+                            public void onClick(DialogInterface dialog, int which) {
+                                switch (which){
+                                    case DialogInterface.BUTTON_POSITIVE:
+                                        Member selectedMember = null;
+                                        for ( Integer selectedItemPosition : selectedItemPositionList) {
+                                            selectedMember = (Member) memberListAdapter.getItem(selectedItemPosition.intValue());
+                                            ArrayList<Member> memberList = dataViewModel.getMemberList().getValue();
+                                            for (int i = 0; i < memberList.size(); i++) {
+                                                if(memberList.get(i).getId() == selectedMember.getId()){
+                                                    memberList.remove(i);
+                                                }
+                                            }
+                                            dataViewModel.setMemberList(memberList);
+                                            MemberManager memberManager = MemberManager.getInstance();
+                                            memberManager.writeToJSONFile(getApplicationContext(), memberList);
+                                        }
+                                        if(finalSize > 1) {
+                                            Toast.makeText(MemberAdministrationActivity.this, getString(R.string.delete_toast_members), Toast.LENGTH_LONG);
+                                        } else {
+                                            Toast.makeText(MemberAdministrationActivity.this, getString(R.string.delete_toast_member, selectedMember.getName()) , Toast.LENGTH_LONG);
+                                        }
+                                        break;
 
+                                    case DialogInterface.BUTTON_NEGATIVE:
+                                        //No button clicked
+                                        break;
+                                }
+                            }
+                        };
+
+                        AlertDialog.Builder builder = new AlertDialog.Builder(MemberAdministrationActivity.this);
+                        if(finalSize > 1) {
+                            builder.setMessage(getString(R.string.delete_question_members)).setPositiveButton("Ja", dialogClickListener)
+                                    .setNegativeButton("Nein", dialogClickListener).show();
+                        } else {
+                            builder.setMessage(getString(R.string.delete_question_member)).setPositiveButton("Ja", dialogClickListener)
+                                    .setNegativeButton("Nein", dialogClickListener).show();
+                        }
+                    }
                 }
+            }
+        });
+
+        dataViewModel.getMemberList().observe(this, new Observer<ArrayList<Member>>() {
+
+            @Override
+            public void onChanged(@Nullable ArrayList<Member> members) {
+                ((BaseAdapter) member_list_view.getAdapter()).notifyDataSetChanged();
             }
         });
     }
@@ -131,15 +166,15 @@ public class MemberAdministrationActivity extends AppCompatActivity {
         } else if(selectedItemPositionList.size() == 1){
             isEditActive = true;
             isDeleteActive = true;
-        } else if(selectedItemPositionList.size() > 1) {
+        } else {
             isEditActive = false;
             isDeleteActive = true;
         }
-        addButton = (FloatingActionButton)findViewById(R.id.fab_action_add);
+        addButton = findViewById(R.id.fab_action_add);
         addButton.setEnabled(isAddActive);
-        editButton = (FloatingActionButton)findViewById(R.id.fab_action_edit);
+        editButton = findViewById(R.id.fab_action_edit);
         editButton.setEnabled(isEditActive);
-        deleteButton = (FloatingActionButton)findViewById(R.id.fab_action_delete);
+        deleteButton = findViewById(R.id.fab_action_delete);
         deleteButton.setEnabled(isDeleteActive);
     }
 
@@ -150,7 +185,7 @@ public class MemberAdministrationActivity extends AppCompatActivity {
         TextView organisationTextView = view.findViewById(R.id.organisation_text_view_member);
         TextView roleTextView = view.findViewById(R.id.role_text_view_member);
         if (!selectedItemPositionList.contains(position)) {
-            selectedItemPositionList.add(new Integer(position));
+            selectedItemPositionList.add(position);
             parent.getChildAt(position).setBackgroundColor(Color.parseColor("#4285f4"));
             idTextView.setTextColor(Color.parseColor("#FFFFFF"));
             titleTextView.setTextColor(Color.parseColor("#FFFFFF"));
@@ -158,7 +193,7 @@ public class MemberAdministrationActivity extends AppCompatActivity {
             organisationTextView.setTextColor(Color.parseColor("#FFFFFF"));
             roleTextView.setTextColor(Color.parseColor("#FFFFFF"));
         } else{
-            selectedItemPositionList.remove(new Integer(position));
+            selectedItemPositionList.remove(Integer.valueOf(position));
             parent.getChildAt(position).setBackgroundColor(Color.parseColor("#FFFFFF"));
             idTextView.setTextColor(Color.parseColor("#ff000000"));
             titleTextView.setTextColor(ContextCompat.getColor(getApplicationContext(), android.R.color.darker_gray));
